--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
     "test:watch": "meteor test --driver-package sanjo:jasmine"
   },
   "dependencies": {
+    "@angular/common": "^2.0.0-rc.4",
+    "@angular/compiler": "^2.0.0-rc.4",
+    "@angular/core": "^2.0.0-rc.4",
+    "@angular/forms": "^0.2.0",
+    "@angular/platform-browser": "^2.0.0-rc.4",
+    "@angular/platform-browser-dynamic": "^2.0.0-rc.4",
+    "@angular/upgrade": "^2.0.0-rc.1",
     "angular": "^1.5.3",
     "angular-animate": "^1.5.3",
     "angular-aria": "^1.5.3",
@@ -18,12 +25,18 @@
     "angular-simple-logger": "^0.1.7",
     "angular-sortable-view": "0.0.15",
     "angular-utils-pagination": "^0.11.1",
+    "angular2-meteor": "^0.5.6",
+    "angular2-meteor-polyfills": "^0.1.1",
+    "es6-shim": "^0.35.0",
     "gm": "^1.22.0",
     "ionic-sdk": "^1.2.4",
     "meteor-node-stubs": "~0.2.0",
     "ng-file-upload": "^12.0.4",
     "ng-img-crop": "^0.2.0",
-    "underscore": "^1.8.3"
+    "reflect-metadata": "^0.1.2",
+    "rxjs": "5.0.0-beta.6",
+    "underscore": "^1.8.3",
+    "zone.js": "^0.6.12"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.3"
